# promty

./: .dockerignore  .gitignore  AGENTS.md  README.md  SECURITY.md  design.md  docker-compose.yml  pyproject.toml
.codex/: hooks.json
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
collector/: .npmignore  README.md  package.json  pyproject.toml
collector/src/: change_tracking.py  cli.py  config.py  context_client.py  environment.py  events.py  file_lock.py  git_context.py  mcp_server.py  payloads.py  response_capture.py  runtime_install.py  secure_storage.py  sequence.py  session_index.py  updater.py  version.py
collector/src/adapters/: __init__.py  common.py
collector/src/adapters/claude/: hook.py
collector/src/adapters/codex/: hook.py
collector/src/adapters/cursor/: hook.py
collector/src/adapters/gemini/: hook.py
collector/src/uploader/: client.py  queue.py
collector/tests/: conftest.py  test_adapters.py  test_cli.py  test_context_client.py  test_environment.py  test_mcp_server.py  test_queue.py  test_secure_storage.py  test_session_index.py  test_updater.py  test_uploader_client.py
docker/: compose.env
docs/: acceptable-use-policy.md  account-deletion-policy.md  agent-context.md  artifact-model.md  aws-github-deployment.md  aws-resource-inventory.md  backend-optimization-plan.md  claude-hook-verification.md  codex-hook-verification.md  context-graph-storage.md  data-retention-policy.md  database.md  development-guidelines.md  event-spec-v1.md  marketing-content-studio.md  memory-architecture.md  privacy-policy.md  (+6 more)
(+494 files in other folders)
