[build-system]
requires = ["setuptools>=75,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "promty-collector"
version = "0.1.5"
description = "Local event collector for Promty"
requires-python = ">=3.12"

[project.scripts]
promty = "cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
  "change_tracking",
  "cli",
  "config",
  "context_client",
  "events",
  "environment",
  "file_lock",
  "git_context",
  "mcp_server",
  "payloads",
  "response_capture",
  "runtime_install",
  "secure_storage",
  "sequence",
  "session_index",
  "updater",
  "version",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adapters*", "uploader*"]
